force-app/main/default/objects/litify_pm__Intake__c/fields/Appointment_Date__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Date__c</fullName>
    <label>Appointment Date</label>
    <type>DateTime</type>
</CustomField>