force-app/main/default/objects/litify_pm__Intake__c/fields/Call_at_Date__c.field-meta.xml
<CustomField>
    <fullName>Call_at_Date__c</fullName>
    <formula>IF(
  NOT(ISBLANK(Appointment_Date__c)) &amp;&amp; NOT(ISBLANK(Follow_Up_Date_Time__c)),
  IF(
    Appointment_Date__c &gt;= Follow_Up_Date_Time__c,
    Appointment_Date__c,
    Follow_Up_Date_Time__c
  ),
  IF(
    NOT(ISBLANK(Appointment_Date__c)),
    Appointment_Date__c,
    IF(
      NOT(ISBLANK(Follow_Up_Date_Time__c)),
      Follow_Up_Date_Time__c,
      CreatedDate
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call at Date</label>
    <type>DateTime</type>
</CustomField>