force-app/main/default/objects/litify_pm__Intake__c/fields/Case_Type_Priority__c.field-meta.xml
<CustomField>
    <fullName>Case_Type_Priority__c</fullName>
    <label>Case Type Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>