force-app/main/default/objects/litify_pm__Intake__c/fields/Case_Type_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Case_Type_Reporting__c</fullName>
    <formula>IF(

TEXT(Type__c) = &quot;Personal Injury&quot;,IF(NOT(ISBLANK(TEXT(Case_Type__c))),TEXT(Case_Type__c),TEXT(Type__c)),
IF(
TEXT(Type__c) = &quot;WC &amp; PI&quot;, TEXT(Case_Type__c),TEXT(Type__c)

)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Type (Reports)</label>
    <type>Text</type>
</CustomField>