force-app/main/default/objects/litify_pm__Intake__c/fields/Priority_Score__c.field-meta.xml
<CustomField>
    <fullName>Priority_Score__c</fullName>
    <formula>(CASE(litify_pm__Status__c, 
         &apos;Lead Generated&apos;, 1,
         &apos;Intake Scheduled&apos;, 2, 
         &apos;In Contact/Under Review&apos;, 3,
         &apos;Missed Appointment&apos;, 4,
         &apos;Intake Package Sent&apos;, 5,
         &apos;Attempting to Contact&apos;, 6,
         &apos;Questionnaire&apos;, 7,
         99) * 10) + 
       CASE(Case_Type_Reporting__c,
         &apos;Labor Law&apos;, 1,
         &apos;MVA&apos;, 2,
         &apos;Premises&apos;, 3,
         &apos;WC &amp; PI&apos;, 4,
         &apos;Personal Injury&apos;, 5,
         &apos;Worker Compensation&apos;, 6,
         7)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Priority Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>