force-app/main/default/objects/litify_pm__Intake__c/fields/Queue_Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Queue_Case_Type__c</fullName>
    <label>Queue Case Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>