force-app/main/default/objects/litify_pm__Intake__c/fields/Referred_By__c.field-meta.xml
<CustomField>
    <fullName>Referred_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referred By</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Intakes (Referred By)</relationshipLabel>
    <relationshipName>Intakes2</relationshipName>
    <type>Lookup</type>
</CustomField>