force-app/main/default/objects/litify_pm__Intake__c/fields/Referred_By_Name__c.field-meta.xml
<CustomField>
    <fullName>Referred_By_Name__c</fullName>
    <formula>Referred_By__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referred By Name</label>
    <type>Text</type>
</CustomField>