force-app/main/default/objects/litify_pm__Intake__c/fields/Test_Record__c.field-meta.xml
<CustomField>
    <fullName>Test_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if this is a test record</inlineHelpText>
    <label>Test Record</label>
    <type>Checkbox</type>
</CustomField>